RESOLVED FIXED265678
[Wasm-GC] Fix exception validation when using GC
https://bugs.webkit.org/show_bug.cgi?id=265678
Summary [Wasm-GC] Fix exception validation when using GC
Asumu Takikawa
Reported 2023-12-01 09:13:02 PST
There are a few small bugs related to exception validation when using Wasm GC. One is that exception signatures are checked only by type equality and not subtyping. The other is that addCatchToUnreachable doesn't factor in Ref/RefNull types in its type switch for validation.
Attachments
Asumu Takikawa
Comment 1 2023-12-01 13:20:48 PST
EWS
Comment 2 2023-12-04 20:05:15 PST
Committed 271527@main (34288ce1365e): <https://commits.webkit.org/271527@main> Reviewed commits have been landed. Closing PR #21182 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-12-04 20:06:14 PST
Note You need to log in before you can comment on or make changes to this bug.