[Wasm-GC] Fix exception validation when using GC https://bugs.webkit.org/show_bug.cgi?id=265678

Reviewed by Justin Michaud.

Adjusts checking of throw arguments and also LLInt catch generation to
work in the presence of GC types.

* JSTests/wasm/gc/exception.js: Added.
(module):
(testExceptionsWithGC):
* Source/JavaScriptCore/wasm/WasmFormat.h:
(JSC::Wasm::isSubtype):
* Source/JavaScriptCore/wasm/WasmFunctionParser.h:
(JSC::Wasm::FunctionParser<Context>::parseExpression):
* Source/JavaScriptCore/wasm/WasmLLIntGenerator.cpp:
(JSC::Wasm::LLIntGenerator::addCatchToUnreachable):

Canonical link: https://commits.webkit.org/271527@main